fixed CHLK-3536 Teacher. Attendance. All. If student name is long, it doesn't fit in the field

--- a/Chalkable.Web/assets/sass2/4_pages/_summary-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_summary-page.sass
@@ -35,8 +35,8 @@
     display: none
     position: absolute
     bottom: 107px
-    left: -30px
-    right: -30px
+    left: 50%
+    transform: translate(-50%, 0)
     +box-shadow(transparentize(#000, .8) 0 0 16px)
     z-index: 1
 
